Fixed slider crumbs, sort on iOS.

--- a/src/app/component/CategorySort/CategorySort.style.scss
+++ b/src/app/component/CategorySort/CategorySort.style.scss
@@ -14,12 +14,6 @@
         margin-left: auto;
     }
 
-    &-Placeholder {
-        @include mobile {
-            top: 13px;
-        }
-    }
-
     &-Select {
         margin-top: 0;
     }
